# recognition_pipeline

./: CMakeLists.txt  CMakeLists.txt~  README.md  main.cpp  matcher.cpp  nearest_neighbors.cpp  plane_estimator.cpp
clusters/: cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  cluster_5.pcd  cluster_6.pcd  cluster_7.pcd  cluster_8.pcd  cluster_9.pcd
data/: scene.pcd
histograms/: cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  cluster_5.pcd  cluster_6.pcd  cluster_7.pcd  cluster_8.pcd  cluster_9.pcd
